--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -659,7 +659,7 @@ and this is a signature of the compliance of the service with the current specif
 
 Discovering the obscore\_radio table alone would be  irrelevant  because querying this
 extension table per se doesn't make sense.
-However, being sure our ivoa schema  contains both the ObsCore table and the obscore_radio table,
+However, being sure our ivoa schema  contains both the ObsCore table and the obscore\_radio table,
 the user is able  to  build any natural JOIN query between these two tables. 
 
 While it is admitted that the table only sits in the tableset of the
