--- a/Appendix.tex
+++ b/Appendix.tex
@@ -7,10 +7,9 @@ can be run with s\_resolution\_min and s\_fov\_max instead of s\_resolution\_max
  s\_fov\_min respectively, to obtain results in which at least part of the dataset satisfy the condition.\\
 For instance, consider datasets with a large observed bandwidth, like those taken with wide/ultrawide band receivers.
 The condition s\_resolution\_max<d\_typical may not be satisfied. At the same time, the user may want to select those 
-dataset where the desired condition on spatial resolution is matched at least partially  within the observed band.
+dataset where the desired condition on spatial resolution is matched at least partially  within the observed band.}
 
-Sections from \ref{sec:instrument-mode} illustrate instrument and observing modes parameters. They must  be completed by science cases.
-}
+\textit{Sections from \ref{sec:instrument-mode} illustrate instrument and observing modes parameters. They must  be completed by science cases.}
 
 %\subsection{Science case }
 \subsection{Use case - s\_resolution\_min}
