--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -275,7 +275,7 @@ In the case of interferometry, a typical value for the spatial resolution will b
 is the %mid value of the spectral range
 receiver nominal wavelength and L is the longest distance in the \emph{uv} plane.
 As above nominal wavelength SHOULD be taken as the mid value of the spectral range except if data providers want  
-for secific reasons. 
+for specific reasons. 
 For beamforming applied to SD \emph{s\_resolution} is set by the size of one individual electronically-formed beam.
 %while in the interferometric case it is ruled by the maximum distance among the radio stations.
 % redondant statement above ?
