--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -652,7 +652,7 @@ VODataService \citep{2021ivoa.spec.1102D} tablesets. The view table providing th
 join between the basic ObsCore table  and the obscore\_radio table
 use the utype
 $$
-\hbox{\nolinkurl{ivo://ivoa.net/std/ObsCore#radioExt-1.0}.}
+\hbox{\nolinkurl{ivo://ivoa.net/std/obscore#radioext-1.0}.}
 $$
 and this is a signature of the compliance of the service with the current specification.
 
@@ -677,7 +677,7 @@ acceptable? Or should we require pure radio coverage?}
 
 %In order to find out directly if the ivoa schema contains the radio extension
 %the schema MUST be defined in the registry with the utype
-%\hbox{\nolinkurl{ivo://ivoa.net/std/ObsCore#obscore-radioExt-1.0}}
+%\hbox{\nolinkurl{ivo://ivoa.net/std/obscore#radioext-1.0}}
 
 To obtain access URLs of all TAP services that have compliant tables
 together with their table names (which in this major version are fixed
