--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -661,7 +661,7 @@ Due to the status of the current specification as an endorsed note, and in previ
 upgrade of the ObsCore specification itself which will address the definition of standardID for the 
 different extensions and recomand how to expose them in the compliant services, we don't define
 any standardID for the extension yet. The discovery of the services and schema containing the
-radio extension  table MUST be done using the table_name only as stated below.
+radio extension  table MUST be done using the table\_name only as stated below.
 
 However, discovering the obscore\_radio table alone would be  irrelevant  because querying this
 extension table per se doesn't make sense. The same schema MUST also contain the ObsCore table.   
