--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -662,7 +662,7 @@ VODataService \citep{2021ivoa.spec.1102D} tablesets.
 %and this is a signature of the compliance of the service with the current specification.
 Due to the status of the current specification as an endorsed note, and in prevision of a major 
 upgrade of the ObsCore specification itself which will address the definition of standardID for the 
-different extensions and recomand how to expose them in the compliant services, we don't define
+different extensions and recommand how to expose them in the compliant services, we don't define
 any standardID for the extension yet. The discovery of the services and schema containing the
 radio extension  table MUST be done using the table\_name only as stated below.
 
@@ -675,7 +675,7 @@ While it is admitted that the table only sits in the tableset of the
 embedding TAP service, implementors are urged to use a seperate registry
 record with the main TAP service as an auxiliary capability
 \citep{2019ivoa.spec.0520D}. In this way, meaningful information
-on coverage in space, time, and spectrum as per VODataService 1.2 can
+on coverage in space, time, and spectral axes as per VODataService 1.2 can
 be communicated to the Registry, which, again, data providers are urged
 to do. There is no expectation that the coverage information only
 pertains to data with entries in \verb|ivoa.obscore_radio|, i.e., it may be
