--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -296,7 +296,7 @@ coefficients of the image Fourier transform. Its UCD string is \emph{stat.fourie
 \subsection{t\_exptime}
 Total duration of the observation for the given dataset or ObsCore entry. For instance  in case of multiple targets, \emph{t\_exptime}
 will be computed for each source and written in the appropriate ObsCore Table entry. The specific case of time series is adressed in another
-specification.
+specification\footnote{https://www.ivoa.net/documents/ObsCoreTimeExtension/20240717/index.html, IVOA working draft}.
 
 
 
