--- a/addoc.bib
+++ b/addoc.bib
@@ -1,1 +1,11 @@
-*
+@misc{2023ivoa.spec.1215B,
+author = {{Bonnarel}, Fran{\c{c}}ois and {Dowler}, Patrick and {Michel}, Laurent and {Demleitner}, Markus and {Taylor}, Mark},
+title = "{IVOA DataLink Version 1.1}",
+howpublished = {IVOA Recommendation 15 December 2023},
+year = 2023,
+month = dec,
+pages = {1215},
+doi = {10.5479/ADS/bib/2023ivoa.spec.1215B},
+adsurl = {https://ui.adsabs.harvard.edu/abs/2023ivoa.spec.1215B},
+adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
