--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -668,7 +668,7 @@ radio extension  table MUST be done using the table\_name only as stated below.
 
 However, discovering the obscore\_radio table alone would be  irrelevant  because querying this
 extension table per se doesn't make sense. The same schema MUST also contain the ObsCore table.   
-Being sure our ivoa schema  contains these both tables,
+Being sure our \textit{ivoa} schema  contains these both tables,
 the user is able  to  build any natural JOIN query between these two tables. 
 
 %While it is admitted that the table only sits in the tableset of the
