--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -475,8 +475,8 @@ WHERE
   [constraints]
 \end{lstlisting}
 
-In addition a view performing this JOIN is included in the ivoa schema in
-order to make it directly available for service users . 
+%In addition a view performing this JOIN is included in the ivoa schema in
+%order to make it directly available for service users . 
 
 % commented below: FB version
 %The ObsCore Extension for Radio data is accessed in a table containing also ObsCore fields within a TAP
