update Appendix:natural join, s_largest_angular,instr_tel

--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -732,6 +732,6 @@ AND schema_name LIKE '%ivoa%'
 \input{Appendix.tex}
 
 
-\bibliography{ivoatex/ivoabib,ivoatex/docrepo,addoc.bib}
+\bibliography{ivoatex/ivoabib,ivoatex/docrepo}
 
 \end{document}
