--- a/Appendix.tex
+++ b/Appendix.tex
@@ -125,9 +125,9 @@ I. Product type is image or cube \\
 II. higher spectral limit < 1Ghz
 \begin{verbatim}
       SELECT * FROM ivoa.obscore
-      WHERE (dataproduct_type = 'image' OR
-      dataproduct_type = 'cube') AND
-      299792458 / em_min  < 1e9
+      WHERE (dataproduct_type = 'image' 
+      OR  dataproduct_type = 'cube') 
+      AND 299792458 / em_min  < 1e9
 \end{verbatim}
 % Mireille Louys: shall we also look for spectra with these frequency constrains ? 
 
@@ -145,8 +145,8 @@ II. higher spectral limit < 1Ghz
 
 \begin{verbatim}
 SELECT * FROM ivoa.obscore NATURAL JOIN ivoa.obscore-radio
-WHERE CONTAINS(POINT(s_ra,s_dec),CIRCLE(82.99458,33.14794,0.0003)) = 1 AND
-s_resolution_max < 0.001
+WHERE CONTAINS(POINT(s_ra,s_dec),CIRCLE(82.99458,33.14794,0.0003)) = 1 
+AND s_resolution_max < 0.001
 \end{verbatim}
 
 \subsection{Use case - reasonable fidelity}
@@ -155,13 +155,14 @@ s_resolution_max < 0.001
 be imaged with reasonable fidelity:}
 
 \begin{verbatim}
-SELECT * FROM ivoa.obscore NATURAL JOIN ivoa.obscore-radio
-WHERE CONTAINS(POINT(s_ra,s_dec),CIRCLE(24.4212500,33.1588889,0.003)) = 1 AND
-s_maximum_angular_scale > 0.018 AND
-uv_distribution_fill > 0.2 AND
-uv_distribution_ecc < 0.75 AND
-em_min < 0.21 AND
-em_max > 0.21
+SELECT * FROM ivoa.obscore 
+NATURAL JOIN ivoa.obscore-radio
+WHERE CONTAINS(POINT(s_ra,s_dec),CIRCLE(24.4212500,33.1588889,0.003)) = 1 
+AND s_largest_angular_scale > 0.018 
+AND uv_distribution_fill > 0.2 
+AND uv_distribution_ecc < 0.75 
+AND em_min < 0.21 
+AND em_max > 0.21
 \end{verbatim}
 
 % end of Mark's (VLBI) science cases
@@ -177,9 +178,6 @@ II. Target Name = Fornax Cluster \\
       WHERE dataproduct_type = 'visibility' 
       AND target_name = 'Fornax cluster'
 \end{verbatim}
-
-
-
 
 
 \subsection{Use case - maximum angular scale selection}
@@ -206,7 +204,8 @@ III. uv distribution filling factor  > 0.7 \\
 IV. uv distribtion factor eccentricity  < 0.1 \\
 V. Position within 1 arcsec of 82.99458 + 33.14794
 \begin{verbatim}
-      SELECT * FROM ivoa.obscore-radio
+      SELECT * FROM ivoa.obscore 
+      NATURAL JOIN  ivoa.obscore-radio
       WHERE dataproduct_type = 'visibilty' 
       AND s_largest_angular_scale_max > 0.018 
       AND uv_distribution_fill > 0.7 
@@ -223,7 +222,8 @@ III. time resolution < 0.1 s\\
 IIV. maximal duration per sample  < 0.05 s \\
 
 \begin{verbatim}
-      SELECT * FROM ivoa.obscore-radio
+       SELECT * FROM ivoa.obscore 
+      NATURAL JOIN  ivoa.obscore-radio
       WHERE instr_type = 'beamForming' 
       AND dataproduct_type = 'timeseries' 
       AND t_resolution < 0.1 AND
@@ -239,7 +239,8 @@ II. Scan mode is raster \\
 III. Target name = 3C 273 or \\
 IV. position inside 3 arcmin around  	187.2779159404900 +02.0523882305500
 \begin{verbatim}
-      SELECT * FROM ivoa.obscore-radio
+      SELECT * FROM ivoa.obscore 
+      NATURAL JOIN  ivoa.obscore-radio
       WHERE instr_type = 'SD' 
       AND scan_mode = 'raster' 
       AND (target_name = '3C 273' OR
@@ -247,21 +248,6 @@ IV. position inside 3 arcmin around  	187.2779159404900 +02.0523882305500
 \end{verbatim}
 
 % use case FB 
-\subsection{Use case - instrument type selection}
-\textit{Any single dish or beam forming dataset  with spectral range inside the 500 Mhz - 1Ghz band and in the Coma Cluster.}\\ \\
-Show me all datasets satisfying:\\
-I. Instrument type is Single dish or beam forming \\
-II. lower spectral limit > 500 Mhz \\
-III. higher spectral limit < 1Ghz \\
-IV. position inside 18 arcmin around 194.93502 +27.91246
-\begin{verbatim}
-      SELECT * FROM ivoa.obscore-radio
-      WHERE (instr_type = 'SD' OR
-      instr_type = 'beamForming') 
-      AND CONTAINS(POINT(s_ra,s_dec),CIRCLE(194.93502, +27.91246, 0.3) = 1     
-\end{verbatim}
-
-
 \subsection{Use case - instrument type and frequency selection }
 \textit{Any single dish or beam forming dataset  with spectral range inside the 500 Mhz - 1Ghz band and in the Coma Cluster.}\\ \\
 Show me all datasets satisfying:\\
@@ -271,15 +257,14 @@ III. higher spectral limit < 1Ghz \\
 IV. position inside 18 arcmin around 194.93502 +27.91246
 
 \begin{verbatim}
-      SELECT * FROM ivoa.obscore-radio
+      SELECT * FROM ivoa.obscore 
+      NATURAL JOIN  ivoa.obscore-radio
       WHERE (instr_type = 'SD' OR
       instr_type = 'beamForming') 
       AND f_min > 500 
       AND f_max < 1000 
       AND CONTAINS(POINT(s_ra,s_dec),CIRCLE(194.93502, +27.91246, 0.3) = 1     
 \end{verbatim}
-
-
 
 
 \subsection{Use case - instrument parameters selection }
@@ -292,8 +277,8 @@ III. antenna maximum distance in meters  > 5000 \\
 \begin{verbatim}
       SELECT * FROM ivoa.obscore-radio
       WHERE instr_type = 'interferometry' 
-      AND instr_ant_number > 40 
-      AND instr_ant_max_dist > 5000 
+      AND instr_tel_number > 40 
+      AND instr_tel_max_dist > 5000 
 \end{verbatim}
 
 
