--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -430,11 +430,60 @@ Parameters \emph{instr\_tel\_number, instr\_tel\_min\_dist} and  \emph{instr\_te
 We note that \emph{instr\_feed} could also  account for the number of beams in the case of a beam forming/PAF receiver.
 
 The scanning strategy adopted in an observation is described by the parameter \emph{scan\_mode}. This parameter covers both spatial
-and frequency scanning modes (see Sect.~\ref{subsec:sd} for details).
+and frequency scanning modes (see Sect.~\ref{subsec:sd} for details and table~\ref{tab:scanmode} for possible values).
 It is applicable to  SD as well as  interferometry cases.
 
-Pointing mode distinguishes targeted observations from  fixed alt-azimuth or wobble ones. The ObsLocTAP specification \citep{2021ivoa.spec.0724S} defines the term \emph{tracking\_type} for describing this as well as a  vocabulary for these modes. 
-We include the same term here in the extension.
+
+\begin{longtable}{  p{6cm} p{7cm}  }
+\sptablerule
+	\textbf{value}&\textbf{definition}\cr
+\sptablerule
+\sptablerule
+	\texttt{on}&\texttt{pointed measurement, total power}\cr
+\sptablerule
+	\texttt{on-spectral}&\texttt{pointed spectrum}\cr
+\sptablerule
+	\texttt{on-off}&\texttt{switched measurements between two positions}\cr
+\sptablerule
+	\texttt{on-off-spectral}&\texttt{switched spectral measurements between two positions}\cr
+\sptablerule
+	\texttt{raster}&\texttt{successive measurement spots on a rectangular mesh}\cr
+\sptablerule
+	\texttt{raster-spectral}&\texttt{successively obtained spectra on a rectangular mesh}\cr
+\sptablerule
+	\texttt{on-the-fly-cross-scan}&\texttt{successive continuous measurements along two orthogonal directions}\cr
+\sptablerule
+	\texttt{on-the-fly-cross-scan-spectral}&\texttt{successiveley obtained spectra along two orthogonal directions}\cr
+\sptablerule
+	\texttt{on-the-fly-map-scan}&\texttt{successive continuous measurements along parallel directions}\cr
+\sptablerule
+	\texttt{on-the-fly-map-scan-spectral}&\texttt{successively obtained spectra along two orthogonal directions}\cr
+\sptablerule
+	\texttt{skydip}&\texttt{long strip of measurements}\cr
+\sptablerule
+	\texttt{skydip-spectral}&\texttt{set of spectra obtained along a long strip}\cr
+
+%	\texttt{target}&\texttt{extrasolar target follow up}\cr
+\sptablerule
+\caption{scan-mode attribute values}
+\label{tab:scanmode}
+\end{longtable}
+
+
+Pointing mode distinguishes observations pointed on a fixed target from  
+observations fixed on a given elevation and azimuth. In addition the  
+wobble mode observes both the source and the surrounding background. 
+The ObsLocTAP specification \citep{2021ivoa.spec.0724S} defines the term 
+\emph{tracking\_type} for describing this as well as a  vocabulary for 
+these modes. We include the same term here in the extension. The set of 
+possible values for radio astronomy data is the following:
+\begin{itemize}
+	\item Sidereal : observations pointed on a fixed targeti, as defined in 
+		ObsLocTAP
+	\item Fixed-az-el-transit : observations fixed on a given elevation 
+		and azimuthi, as in ObsLocTAP
+	\item Wobble : observations measuring both the source and the surroundings	
+\end{itemize}
 
 \subsection{Auxiliary datasets useful for data quality estimation}
 
@@ -609,9 +658,9 @@ WHERE
 \sptablerule
 \texttt{instr\_feed}&\texttt{number of feeds}&\texttt{Provenance.ObsConfig.\newline Instrument.Feed}&instr.param&& radio  \cr
 \sptablerule
-\texttt{scan\_mode}&\texttt{scan mode (on-off, \newline raster map, on-the-fly map,...)\newline }&\texttt{Provenance.\newline Observation.\newline sky\_scan\_mode}&instr.param&& radio \cr
+\texttt{scan\_mode}&\texttt{sky and spectral axis scan mode }&\texttt{Provenance.\newline Observation.\newline sky\_scan\_mode}&instr.param&& radio \cr
 \sptablerule
-\texttt{tracking\_mode}&\texttt{targeted, alt-azimuth, wobble, ...)\newline }&\texttt{Provenance.\newline Observation.\newline tracking\_mode}&instr.param&& radio \cr
+\texttt{tracking\_type}&\texttt{target tracking modes}&\texttt{Provenance.\newline Observation.\newline tracking\_mode}&instr.param&& radio \cr
 \caption{ObsCore extension proposal for instrumental parameters for radio data}
 \label{tab:ExtensionAtt_instrumental}
 \end{longtable}
